--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-<!-- 	<link rel="icon" type="image/png" href="/static/web_3/img/favicon/256x256.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/web_3/img/favicon/114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/web_3/img/favicon/72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/web_3/img/favicon/57x57.png"> -->
+    {% if company.favicon %}
+        <link rel="icon" type="image/png" href="{{company.favicon.url}}"/>
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{company.favicon.url}}">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{company.favicon.url}}">
+        <link rel="apple-touch-icon-precomposed" href="{{company.favicon.url}}">
+    {% endif %}
     {% block cssadicional %}
     <style>
         .gracaptcha-badge {
