--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -191,7 +191,7 @@
                 {% if company.job_company%}
                 <div class="g8Input">
                     <span>Empresa *</span>
-                    <input type="text" class="g8Box validate[required]">
+                    <input type="text" class="g8Box validate[required]" name="{{form_register.job_company.html_name}}">
                 </div>
                 {% endif %}
                 {% if company.job_company_select%}
