Fix dashboard data

--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -121,7 +121,7 @@
                                                     <td class="text-nowrap">
                                                         <div class="d-flex flex-column">
                                                             {% if c.virtual and c.in_person and c.confirmed %}
-                                                                <span class="font-weight-bolder mb-25">Presencial</span>
+                                                                <span class="font-weight-bolder mb-25">Virtual / Presencial</span>
                                                             {% elif c.in_person and c.confirmed %}
                                                                 <span class="font-weight-bolder mb-25">Presencial</span>
                                                             {% elif c.virtual %}
