Fix creation for users

--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -120,9 +120,9 @@
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <div class="d-flex flex-column">
-                                                            {% if c.virtual and c.in_person and c.confirmed %}
-                                                                <span class="font-weight-bolder mb-25">Virtual / Presencial</span>
-                                                            {% elif c.in_person and c.confirmed %}
+                                                            {% if c.virtual and c.in_person %}
+                                                                <span class="font-weight-bolder mb-25">Presencial</span>
+                                                            {% elif c.in_person %}
                                                                 <span class="font-weight-bolder mb-25">Presencial</span>
                                                             {% elif c.virtual %}
                                                                 <span class="font-weight-bolder mb-25">Virtual</span>
