--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -22,7 +22,7 @@
                 {% if header_section.show_schedule_section %}
                     <a href="#agenda" class="headerAnclaBlock">{{header_section.schecule_header_name}}<span class="lineActive" style="background:#2AD2C9;"></span></a>
                 {% endif %}
-                {% if header_section.show_workshops_section and company_user.in_person %}
+                {% if header_section.show_workshops_section and access_workshop %}
                 <a href="#talleres" class="headerAnclaBlock">{{header_section.workshops_header_name}} <span class="lineActive" style="background:#2AD2C9;"></span></a>
                 {% endif %}
                 {% if header_section.show_frequently_questions_section %}
